// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Header 1`] = `
<div
  className="hero-image card-header"
  style={
    Object {
      "backgroundImage": "url(1)",
    }
  }
>
  <div
    className="title row"
  >
    <div
      className="col-12"
    >
      <h2>
        Tasty Chili
      </h2>
      <p
        className="rating-stars"
      >
        <i
          className="bi bi-star-fill size-1x"
        />
        <i
          className="bi bi-star-fill size-1x"
        />
        <i
          className="bi bi-star-fill size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
      </p>
    </div>
  </div>
  <div
    className="options print-hidden row"
  >
    <div
      className="col-12"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[MockFunction]}
        type="button"
      >
        <i
          className="bi bi-calendar-fill size-1x"
        />
      </button>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <i
          className="bi bi-printer-fill size-1x"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`Test Header w/ bad rating 1`] = `
<div
  className="card-header"
>
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <h2>
        Tasty Chili
      </h2>
      <p
        className="rating-stars"
      >
        <i
          className="bi bi-star size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
      </p>
    </div>
  </div>
</div>
`;

exports[`Test Header w/ no Photo 1`] = `
<div
  className="card-header"
>
  <div
    className="row"
  >
    <div
      className="col-12"
    >
      <h2>
        Tasty Chili
      </h2>
      <p
        className="rating-stars"
      >
        <i
          className="bi bi-star-fill size-1x"
        />
        <i
          className="bi bi-star-fill size-1x"
        />
        <i
          className="bi bi-star-fill size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
        <i
          className="bi bi-star size-1x"
        />
      </p>
    </div>
  </div>
</div>
`;
